--- a/src/index.css
+++ b/src/index.css
@@ -24,11 +24,12 @@
 
 .section2 {
     display: flex;
-    margin-top: 14%;
+    margin-top: 12%;
 }
 
 .main--text {
     flex: 2;
+    padding: 10px;
 }
 
 .main--text h1 {
@@ -83,10 +84,10 @@
 }
 
 .stuff {
-    width: 170px;
-    height: 170px;
+    width: 90%;
+    height: auto;
     border: 4px solid #3882F6;
-    border-radius: 20px;
+    border-radius: 0px;
 }
 
 
@@ -148,7 +149,21 @@ footer {
     color: #F9F1F8;
 }
 
+
+
 @media screen and (max-width: 910px) {
+    .section2 {
+        margin-top: 5%;
+        flex-direction: column;
+    }
+
+    .img {
+        margin-top: 20px;
+        padding: 100px;
+        flex: 1;
+
+    }
+
     .stuff--group {
         grid-template-columns: 1fr 1fr;
     }
@@ -161,4 +176,7 @@ footer {
         padding: 5% 5%;
     }
 
+    .sign-up {
+        font-size: 2px;
+    }
 }
